[package]
name = "donkey-make"
version = "0.4.1"
authors = ["Samuel Colvin <s@muelcolvin.com>"]
edition = "2018"
description = "Make for the 21st century"

[dependencies]
ansi_term = "0.11"
atty = "0.2"
clap = {version = "2.33.0", features = ["yaml", "wrap_help", "color"]}
linked-hash-map = {version = "0.5.2", features = ["serde_impl"]}
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
signal-hook = "0.1.8"
strsim = "0.8"
notify = "4.0.10"
nix = "0.14.0"
regex = "1"
lazy_static = "1.3.0"
